// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.date $ariaDetails 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-date>
`;

exports[`control.date $ariaDetails 2`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-date>
`;

exports[`control.date $ariaSpeak 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="my-test-id txt2 my-test-id2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-date>
`;

exports[`control.date $ariaSpeak 2`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="my-test-id my-test-id2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-date>
`;

exports[`control.date $show/$hide error 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-date>
`;

exports[`control.date $show/$hide error 2`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date $show/$hide error 3`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-date>
`;

exports[`control.date common tests render + styles 1`] = `<wup-date />`;

exports[`control.date common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height: 1px; width: 1px;
top:0;left:0;
overflow: hidden;
clip: rect(1px, 1px, 1px, 1px);}
  :root {
          --base-bg: #fff;
          --base-text: #232323;
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time, 200ms) cubic-bezier(0, 0, 0.2, 1) 0ms;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--base-focus);
        --ctrl-selected: var(--ctrl-focus-label);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl-bg: var(--base-bg);
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err-text: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-icon-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath stroke='black' stroke-width='40' d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
      }
  :root {
      --ctrl-clear-hover: rgba(255,0,0,0.1);
      --ctrl-clear-hover-size: 22px;
     }
  :root {
        --ctrl-date-icon-img: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M652.801 76.8c42.24 0 76.8 34.56 76.8 76.8v537.601c0 42.24-34.56 76.8-76.8 76.8H115.2c-42.624 0-76.8-34.56-76.8-76.8l.384-537.601c0-42.24 33.792-76.8 76.416-76.8h38.4V0h76.8v76.8h307.2V0h76.8v76.8h38.4zM192 345.6h76.8v76.8H192v-76.8zm230.4 0v76.8h-76.8v-76.8h76.8zm153.601 0h-76.8v76.8h76.8v-76.8zM115.2 691.2h537.601V268.8H115.2v422.4z'/%3E%3C/svg%3E");
      }
  
      WUP-DATE {
        contain: style;
        display: block;
        margin-bottom: 20px;
        position: relative;
        border-radius: var(--ctrl-border-radius);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-DATE strong,
      WUP-DATE legend {
        color: var(--ctrl-label);
      }
      WUP-DATE:focus-within,
      WUP-DATE:focus-within &gt; [menu] {
        z-index: 90010;
        outline: 1px solid var(--ctrl-focus);
      }
      WUP-DATE:focus-within strong,
      WUP-DATE:focus-within legend,
      WUP-DATE input:focus + * {
        color: var(--ctrl-focus-label);
      }
      WUP-DATE:not(:focus-within) strong {
        pointer-events: none;
      }
      [disabled]&gt;WUP-DATE,
      WUP-DATE[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled]&gt;WUP-DATE &gt; *,
      WUP-DATE[disabled] &gt; * {
        pointer-events: none;
      }
      WUP-DATE[invalid],
      WUP-DATE[invalid] &gt; [menu] {
        box-shadow: 0 0 3px 0 var(--ctrl-invalid-border);
        outline-color: var(--ctrl-invalid-border);
      }
      WUP-DATE label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-DATE input {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-DATE input + * {
        cursor: inherit;
      }
      WUP-DATE input:required + *:after,
      WUP-DATE input[aria-required="true"] + *:after,
      WUP-DATE fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-DATE [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err-text);
        background: var(--ctrl-err-bg);
        max-height: 3em;
        overflow: auto;
        overflow: overlay;
      }
      WUP-DATE [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-DATE [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-DATE [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err-text);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 0 5px;
flex: 0 0 auto;
align-self: stretch;
cursor: pointer;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-DATE [error] li[valid] {
        color: var(--ctrl-err-icon-valid);
      }
      WUP-DATE [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-icon-valid);
      }
      WUP-DATE:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) {
        /*WUP-DATE:hover {
          z-index: 90011;
        }
        WUP-DATE:hover [error] {
          max-height: none;
        }*/
        WUP-DATE:hover,
        WUP-DATE:hover &gt; [menu] {
          box-shadow: 0 0 3px 1px var(--ctrl-focus);
        }
        WUP-DATE[invalid]:hover,
        WUP-DATE[invalid]:hover &gt; [menu] {
          box-shadow: 0 0 3px 1px var(--ctrl-invalid-border);
        }
      }
        WUP-DATE {
          cursor: text;
        }
        WUP-DATE label &gt; span {
          width: 100%;
          position: relative;
        }
        WUP-DATE input,
        WUP-DATE [maskholder] {
          width: 100%;
          box-sizing: border-box;
          font: inherit;
          color: inherit;
          margin: 0;
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          border: none;
          background: none;
          outline: none;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-DATE [maskholder] {
          position: absolute;
          opacity: 0.65;
          display: none;
          pointer-events: none;
          text-overflow: initial;
        }
        WUP-DATE [maskholder]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-DATE input:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
        }
        WUP-DATE input:autofill {
          font: inherit;
          background-clip: text;
        }
        WUP-DATE input + * {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
        }
        @media not all and (prefers-reduced-motion) {
          WUP-DATE input + * {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-DATE input:not(:focus)::placeholder {
          color: transparent;
        }
        WUP-DATE:focus-within input + strong,
        WUP-DATE input:not(:placeholder-shown) + strong,
        WUP-DATE legend {
          top: 0.2em;
          transform: scale(0.9);
        }
        WUP-DATE:focus-within [maskholder] {
          display: inline-block;
        }
        /* style for icons */
        WUP-DATE label button,
        WUP-DATE label button:after,
        WUP-DATE label:after,
        WUP-DATE label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 0 5px;
flex: 0 0 auto;
align-self: stretch;
cursor: pointer;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-DATE label:after {
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-DATE label:before {
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-DATE label button {
           z-index: 1;
           contain: strict;
        }
        WUP-DATE label&gt;span + button {
          margin-right: -0.5em;
        }
        WUP-DATE button[clear] {
          position: relative;
          background: none;
        }
        WUP-DATE button[clear]:after {
          content: "";
          padding: 0;
          -webkit-mask-image: var(--wup-icon-cross);
          mask-image: var(--wup-icon-cross);
        }
        WUP-DATE button[clear]:after,
        WUP-DATE button[clear]:before {
          position: absolute;
          top: 50%; left: 50%;
          transform: translate(-50%, -50%);
          width: 100%;
          padding-top: 100%;
        }
        WUP-DATE button[clear]:before {
          width: var(--ctrl-clear-hover-size);
          padding-top: var(--ctrl-clear-hover-size);
        }
        @media (hover: hover) {
          WUP-DATE button[clear]:hover {
            box-shadow: none;
          }
          WUP-DATE button[clear]:hover:before {
            content: "";
            border-radius: 50%;
            box-shadow: inset 0 0 0 99999px var(--ctrl-clear-hover);
          }
          WUP-DATE button[clear]:hover:after {
            background-color: var(--ctrl-err-text);
          }
          WUP-DATE[readonly] button[clear] {
            pointer-events: none;
          }
        }
      WUP-DATE {
        cursor: pointer;
      }
      WUP-DATE input {
        cursor: text;
      }
      WUP-DATE input:placeholder-shown,
      WUP-DATE input:read-only {
        cursor: pointer;
      }
      WUP-DATE label::after {
        content: "";
        -webkit-mask-image: var(--ctrl-icon-img);
        mask-image: var(--ctrl-icon-img);
      }
      @media not all and (prefers-reduced-motion) {
        WUP-DATE label::after {
          transition: transform var(--anim);
        }
      }
      WUP-DATE button[clear] {
        margin: 0;
      }
      WUP-DATE [menu] {
        padding: 0;
        max-height: 300px;
        z-index: 90010;
      }
      WUP-DATE {
        --ctrl-icon-img: var(--ctrl-date-icon-img);
      }
      WUP-DATE wup-calendar {
        margin: 0;
      }
      WUP-DATE [menu] {
        overflow: hidden;
      }
</style>
`;

exports[`control.date validations $options.validationShowAll 1`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="max-width: 100px;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min date is 2022-05-20
      </li>
      <li>
        Max date is 2022-10-28
      </li>
      <li>
        This date is disabled
      </li>
    </ul>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations $options.validationShowAll 2`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i>
          2022-02-28
        </i>
        
      </span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt3"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt3"
    role="alert"
    style="max-width: 100px;"
  >
    <span
      class="wup-hidden"
    />
    <span
      class="wup-hidden"
    >
      Min date is 2022-05-20
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min date is 2022-05-20
      </li>
      <li
        valid=""
      >
        Max date is 2022-10-28
      </li>
      <li
        valid=""
      >
        This date is disabled
      </li>
    </ul>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations $options.validationShowAll 3`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i>
          2022-02-28
        </i>
        
      </span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt6"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Name
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt6"
    role="alert"
    style="max-width: 100px;"
  >
    <span
      class="wup-hidden"
    >
      undefined First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations options.validationCase 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i>
          2022-02-28
        </i>
        
      </span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-date>
`;

exports[`control.date validations options.validationCase 2`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i />
        yyyy-mm-dd
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt2"
        aria-describedby="txt4"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="txt2"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    menu=""
  >
    <wup-calendar>
      <div
        calendar="year"
        id="txt2"
      >
        <header>
          <button
            aria-hidden="true"
            disabled=""
            tabindex="-1"
          >
            2018 ... 2033
          </button>
        </header>
        <div>
          <div>
            <ol
              role="grid"
              style="overflow: hidden;"
            >
              <li
                role="gridcell"
              >
                2018
              </li>
              <li
                role="gridcell"
              >
                2019
              </li>
              <li
                role="gridcell"
              >
                2020
              </li>
              <li
                role="gridcell"
              >
                2021
              </li>
              <li
                aria-current="date"
                role="gridcell"
              >
                2022
              </li>
              <li
                role="gridcell"
              >
                2023
              </li>
              <li
                role="gridcell"
              >
                2024
              </li>
              <li
                role="gridcell"
              >
                2025
              </li>
              <li
                role="gridcell"
              >
                2026
              </li>
              <li
                role="gridcell"
              >
                2027
              </li>
              <li
                role="gridcell"
              >
                2028
              </li>
              <li
                role="gridcell"
              >
                2029
              </li>
              <li
                role="gridcell"
              >
                2030
              </li>
              <li
                role="gridcell"
              >
                2031
              </li>
              <li
                role="gridcell"
              >
                2032
              </li>
              <li
                role="gridcell"
              >
                2033
              </li>
            </ol>
          </div>
        </div>
      </div>
    </wup-calendar>
  </wup-popup>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    style="max-width: 100px;"
  >
    <span
      class="wup-hidden"
    >
      undefined First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations options.validationCase 3`] = `
<wup-date
  invalid=""
  opened=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i>
          2022-02-28
        </i>
        
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt5"
        aria-describedby="txt6"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="txt5"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt6"
    style="max-width: 100px;"
  >
    <span
      class="wup-hidden"
    >
      undefined First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
  <wup-popup
    menu=""
    style=""
  >
    <wup-calendar>
      <div
        calendar="day"
        id="txt5"
      >
        <header>
          <button
            aria-hidden="true"
            tabindex="-1"
          >
            February 2022
          </button>
        </header>
        <div>
          <div>
            <ul
              aria-hidden="true"
            >
              <li>
                Mo
              </li>
              <li>
                Tu
              </li>
              <li>
                We
              </li>
              <li>
                Th
              </li>
              <li>
                Fr
              </li>
              <li>
                Sa
              </li>
              <li>
                Su
              </li>
            </ul>
            <ol
              role="grid"
              style="overflow: hidden;"
            >
              <li
                prev=""
                role="gridcell"
              >
                31
              </li>
              <li
                role="gridcell"
              >
                1
              </li>
              <li
                role="gridcell"
              >
                2
              </li>
              <li
                role="gridcell"
              >
                3
              </li>
              <li
                role="gridcell"
              >
                4
              </li>
              <li
                role="gridcell"
              >
                5
              </li>
              <li
                role="gridcell"
              >
                6
              </li>
              <li
                role="gridcell"
              >
                7
              </li>
              <li
                role="gridcell"
              >
                8
              </li>
              <li
                role="gridcell"
              >
                9
              </li>
              <li
                role="gridcell"
              >
                10
              </li>
              <li
                role="gridcell"
              >
                11
              </li>
              <li
                role="gridcell"
              >
                12
              </li>
              <li
                role="gridcell"
              >
                13
              </li>
              <li
                role="gridcell"
              >
                14
              </li>
              <li
                role="gridcell"
              >
                15
              </li>
              <li
                role="gridcell"
              >
                16
              </li>
              <li
                role="gridcell"
              >
                17
              </li>
              <li
                role="gridcell"
              >
                18
              </li>
              <li
                role="gridcell"
              >
                19
              </li>
              <li
                role="gridcell"
              >
                20
              </li>
              <li
                role="gridcell"
              >
                21
              </li>
              <li
                role="gridcell"
              >
                22
              </li>
              <li
                role="gridcell"
              >
                23
              </li>
              <li
                role="gridcell"
              >
                24
              </li>
              <li
                role="gridcell"
              >
                25
              </li>
              <li
                role="gridcell"
              >
                26
              </li>
              <li
                role="gridcell"
              >
                27
              </li>
              <li
                aria-selected="true"
                role="gridcell"
              >
                28
              </li>
              <li
                next=""
                role="gridcell"
              >
                1
              </li>
              <li
                next=""
                role="gridcell"
              >
                2
              </li>
              <li
                next=""
                role="gridcell"
              >
                3
              </li>
              <li
                next=""
                role="gridcell"
              >
                4
              </li>
              <li
                next=""
                role="gridcell"
              >
                5
              </li>
              <li
                next=""
                role="gridcell"
              >
                6
              </li>
              <li
                next=""
                role="gridcell"
              >
                7
              </li>
              <li
                next=""
                role="gridcell"
              >
                8
              </li>
              <li
                next=""
                role="gridcell"
              >
                9
              </li>
              <li
                next=""
                role="gridcell"
              >
                10
              </li>
              <li
                next=""
                role="gridcell"
              >
                11
              </li>
              <li
                next=""
                role="gridcell"
              >
                12
              </li>
              <li
                next=""
                role="gridcell"
              >
                13
              </li>
            </ol>
          </div>
        </div>
      </div>
    </wup-calendar>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations options.validationCase 4`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i />
        yyyy-mm-dd
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt7"
        aria-describedby="txt8"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="txt7"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt8"
    role="alert"
    style="max-width: 100px;"
  >
    <span
      class="wup-hidden"
    >
      undefined First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date with form 1`] = `
<wup-form
  role="form"
>
  <wup-date>
    <label
      for="txt1"
    >
      <span>
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          id="txt1"
          placeholder=" "
          role="combobox"
          type="text"
        />
        <strong>
          First Input
        </strong>
      </span>
      <button
        aria-hidden="true"
        clear=""
        tabindex="-1"
      />
    </label>
  </wup-date>
</wup-form>
`;
